# Unhuddle_denoise

./: .gitignore  README.md  pyproject.toml  run.py  unhuddle_v1.py  unhuddle_v3.py  unhuddle_v5.py
archive/: unhuddle_v1.py  unhuddle_v2.py  unhuddle_v3.py  unhuddle_v4.py  unhuddle_v5.py
demodata/Tonsil/: CCR4.ome.tiff  CD11c.ome.tiff  CD15.ome.tiff  CD19.ome.tiff  CD20.ome.tiff  CD27.ome.tiff  CD4.ome.tiff  CD45RA.ome.tiff  CD56.ome.tiff  CD7.ome.tiff  CD8a.ome.tiff  CD90.ome.tiff  DNA1.ome.tiff  DNA2.ome.tiff  FOXP3.ome.tiff  GranzymeB.ome.tiff  HistoneH3.ome.tiff  IDO.ome.tiff  Ki67.ome.tiff  LAG3.ome.tiff  OX40.ome.tiff  TIGIT.ome.tiff  VISTA.ome.tiff  Vimentin.ome.tiff  deepcell_mask_0.tiff
demodata/Tonsil1_1/: CD11b.ome.tiff  CD14.ome.tiff  CD16.ome.tiff  CD163.ome.tiff  CD3.ome.tiff  CD31.ome.tiff  CD45RO.ome.tiff  CD68.ome.tiff  CXCR5.ome.tiff  HLADR.ome.tiff  ICOS.ome.tiff  PD1.ome.tiff  SMA.ome.tiff  SPARC.ome.tiff  TCRgd.ome.tiff  TIM3.ome.tiff  Tbet.ome.tiff  clcaspase.ome.tiff  deepcel_mask.tiff  deepcell_mask_0.tiff  deepcell_mask_1.tiff  filled_nucmask.tiff  membrane_exclusion_mask.tiff  membrane_mask.tiff  overlay.tiff
results/unhuddle_output/adata_objects/: adata1.h5ad
results/unhuddle_output/morphology_features/: Tonsil1_1.csv
results/unhuddle_output/original_normalized/: Tonsil1_1.csv
results/unhuddle_output/original_sum/: Tonsil1_1.csv
results/unhuddle_output/unhuddle_denoised_normalized/: Tonsil1_1.csv
results/unhuddle_output/unhuddle_denoised_sum/: Tonsil1_1.csv
results/unhuddle_output/unhuddle_normalized/: Tonsil1_1.csv
results/unhuddle_output/unhuddle_sum/: Tonsil1_1.csv
src/unhuddle/: CLI_helpers.py  adata_builder.py  cli.py  cli_helpers.py  deepcell.py  features.py  interactions.py  masks.py  normalization.py  pipeline.py  reallocation_denoiser.py  utils.py
src/unhuddle_denoise/: adata_builder.py  cli.py  cli_helpers.py  deepcell.py  interactions.py  masks.py  normalization.py  pipeline.py  qc_pipeline.py  reallocation_denoiser.py  run_fitsne.py
