[project]
name = "unhuddle-denoise"
version = "0.1.0"
description = "Highly multiplex proteomics: Signal deconvolution and normalization in densely packed tissue using UNHUDDLE."
authors = [
  { name = "Troy Noordenbos", email = "tnoorden@stanford.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "pandas",
  "scikit-image",
  "scipy",
  "tifffile",
  "tqdm",
  "selenium",
  "requests",
  "anndata",
  "matplotlib",
  "scikit-learn"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
unhuddle-denoise = "unhuddle_denoise.cli:main"  # new entry point

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "isort"
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
